// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rendering renders correctly with a single child 1`] = `
<div
  className="root"
>
  <ul
    className="list
          alignLeft"
  >
    <span>
      content
    </span>
  </ul>
</div>
`;

exports[`rendering renders correctly with multiple children 1`] = `
<div
  className="root"
>
  <ul
    className="list
          alignLeft"
  >
    <span>
      content 1
    </span>
    <span>
      content 2
    </span>
    <span>
      content 3
    </span>
  </ul>
</div>
`;

exports[`rendering renders correctly with multiple children and all props 1`] = `
<div
  className="root
        isAutoWidth"
>
  <ul
    className="list
          alignRight"
  >
    <span>
      content 1
    </span>
    <span>
      content 2
    </span>
    <span>
      content 3
    </span>
  </ul>
</div>
`;

exports[`rendering renders correctly with no children 1`] = `""`;
